Correct typos // testing

--- a/src/main/resources/assets/beyondrealitycore/lang/en_US.lang
+++ b/src/main/resources/assets/beyondrealitycore/lang/en_US.lang
@@ -7,13 +7,13 @@ tile.beyondrealitycore:customBlock_5.name=Moon Redstone Ore
 tile.beyondrealitycore:customBlock_6.name=Mars Redstone Ore
 tile.beyondrealitycore:customBlock_7.name=Moon Lapis Ore
 tile.beyondrealitycore:customBlock_8.name=Mars Lapis Ore
-tile.beyondrealitycore:customBlock_9.name=Moon Tetrahedryte Ore
-tile.beyondrealitycore:customBlock_10.name=Mars Tetrahedryte Ore
+tile.beyondrealitycore:customBlock_9.name=Moon Tetrahedrite Ore
+tile.beyondrealitycore:customBlock_10.name=Mars Tetrahedrite Ore
 tile.beyondrealitycore:customBlock_11.name=Moon Bauxite Ore
 tile.beyondrealitycore:customBlock_12.name=Mars Bauxite Ore
 tile.beyondrealitycore:customBlock_13.name=Mars Uranium Ore
-tile.beyondrealitycore:customBlock_14.name=Moon Casseterite Ore
-tile.beyondrealitycore:customBlock_15.name=Mars Casseterite Ore
+tile.beyondrealitycore:customBlock_14.name=Moon Cassiterite Ore
+tile.beyondrealitycore:customBlock_15.name=Mars Cassiterite Ore
 tile.beyondrealitycore:customBlock_16.name=Moon Silver Ore
 tile.beyondrealitycore:customBlock_17.name=Mars Silver Ore
 tile.beyondrealitycore:customBlock_18.name=Moon Lead Ore
