--- a/src/main/resources/assets/beyondrealitycore/lang/en_US.lang
+++ b/src/main/resources/assets/beyondrealitycore/lang/en_US.lang
@@ -28,5 +28,6 @@ tile.beyondrealitycore:customBlock_26.name=Mars Ruby Ore
 tile.beyondrealitycore:customBlock_27.name=Moon Glowstone
 tile.beyondrealitycore:customBlock_28.name=Mars Mutagen crystals
 tile.beyondrealitycore:customBlock_29.name=Mars Naquadria Ore
+tile.beyondrealitycore:BRC:dimGuardKiller.name=BR Item Fixer
 
 
