Started work on IGW

--- a/src/main/resources/assets/beyondrealitycore/lang/en_US.lang
+++ b/src/main/resources/assets/beyondrealitycore/lang/en_US.lang
@@ -1,3 +1,5 @@
+tab.entry.changelog=Changelog
+
 tile.beyondrealitycore:customBlock_0.name=Moon Iron Ore
 tile.beyondrealitycore:customBlock_1.name=Mars Iron Ore
 tile.beyondrealitycore:customBlock_2.name=Mars Gold Ore
