Add greg guide test

--- a/src/main/resources/assets/beyondrealitycore/lang/en_US.lang
+++ b/src/main/resources/assets/beyondrealitycore/lang/en_US.lang
@@ -1,4 +1,5 @@
 tab.entry.changelog=Changelog
+tab.entry.gregguide=Greg Tech Guide
 
 tile.beyondrealitycore:customBlock_0.name=Moon Iron Ore
 tile.beyondrealitycore:customBlock_1.name=Mars Iron Ore
