Gravel Ores and Ore Chunks

--- a/src/main/resources/assets/beyondrealitycore/lang/en_US.lang
+++ b/src/main/resources/assets/beyondrealitycore/lang/en_US.lang
@@ -35,7 +35,6 @@ tile.beyondrealitycore:BRC:dimGuardKiller.name=BR Item Fixer
 
 itemGroup.tabBeyondReality=Beyond Reality Core
 tile.beyondrealitycore:oreApatite.name=Apatite Ore
-item.beyondrealitycore:gemApatite.name=Apatite
 tile.beyondrealitycore:oreCopper.name=Copper Ore
 tile.beyondrealitycore:oreTin.name=Tin Ore
 tile.beyondrealitycore:oreLead.name=Lead Ore
@@ -48,4 +47,49 @@ tile.beyondrealitycore:oreIndium.name=Indium Ore
 tile.beyondrealitycore:oreUranium.name=Uranium Ore
 tile.beyondrealitycore:orePhosphate.name=Phosphate Ore
 tile.beyondrealitycore:oreZinc.name=Zinc Ore
+tile.beyondrealitycore:oreMagnetite.name=Magnetite Ore
+tile.beyondrealitycore:tinyoreApatite.name=Apatite Gravel Ore
+tile.beyondrealitycore:tinyoreCopper.name=Copper Gravel Ore
+tile.beyondrealitycore:tinyoreTin.name=Tin Gravel Ore
+tile.beyondrealitycore:tinyoreLead.name=Lead Gravel Ore
+tile.beyondrealitycore:tinyoreSilver.name=Silver Gravel Ore
+tile.beyondrealitycore:tinyoreNickel.name=Nickel Gravel Ore
+tile.beyondrealitycore:tinyoreAluminium.name=Aluminium Gravel Ore
+tile.beyondrealitycore:tinyorePlatinum.name=Platinum Gravel Ore
+tile.beyondrealitycore:tinyoreCadmium.name=Cadmium Gravel Ore
+tile.beyondrealitycore:tinyoreIndium.name=Indium Gravel Ore
+tile.beyondrealitycore:tinyoreMagnetite.name=Magnetite Gravel Ore
+tile.beyondrealitycore:tinyoreUranium.name=Uranium Gravel Ore
+tile.beyondrealitycore:tinyorePhosphate.name=Phosphate Gravel Ore
+tile.beyondrealitycore:tinyoreZinc.name=Zinc Gravel Ore
+tile.beyondrealitycore:tinyoreIron.name=Iron Gravel Ore
+tile.beyondrealitycore:tinyoreGold.name=Gold Gravel Ore
+tile.beyondrealitycore:tinyoreDiamond.name=Diamond Gravel Ore
+tile.beyondrealitycore:tinyoreEmerald.name=Emerald Gravel Ore
+tile.beyondrealitycore:tinyoreRedstone.name=Redstone Gravel Ore
+tile.beyondrealitycore:tinyoreLapis.name=Lapis Gravel Ore
+tile.beyondrealitycore:tinyoreCoal.name=Coal Gravel Ore
+
+item.beyondrealitycore:gemApatite.name=Apatite
+item.beyondrealitycore:tinyApatite.name=Apatite Ore Chunks
+item.beyondrealitycore:tinyCopper.name=Copper Ore Chunks
+item.beyondrealitycore:tinyTin.name=Tin Ore Chunks
+item.beyondrealitycore:tinyLead.name=Lead Ore Chunks
+item.beyondrealitycore:tinySilver.name=Silver Ore Chunks
+item.beyondrealitycore:tinyNickel.name=Nickel Ore Chunks
+item.beyondrealitycore:tinyAluminium.name=Aluminium Ore Chunks
+item.beyondrealitycore:tinyPlatinum.name=Platinum Ore Chunks
+item.beyondrealitycore:tinyCadmium.name=Cadmium Ore Chunks
+item.beyondrealitycore:tinyIndium.name=Indium Ore Chunks
+item.beyondrealitycore:tinyMagnetite.name=Magnetite Ore Chunks
+item.beyondrealitycore:tinyUranium.name=Uranium Ore Chunks
+item.beyondrealitycore:tinyPhosphate.name=Phosphate Ore Chunks
+item.beyondrealitycore:tinyZinc.name=Zinc Ore Chunks
+item.beyondrealitycore:tinyIron.name=Iron Ore Chunks
+item.beyondrealitycore:tinyGold.name=Gold Ore Chunks
+item.beyondrealitycore:tinyDiamond.name=Diamond Ore Chunks
+item.beyondrealitycore:tinyEmerald.name=Emerald Ore Chunks
+item.beyondrealitycore:tinyRedstone.name=Redstone Ore Chunks
+item.beyondrealitycore:tinyLapis.name=Lapis Ore Chunks
+item.beyondrealitycore:tinyCoal.name=Coal Ore Chunks
 
