--- a/src/main/resources/assets/beyondrealitycore/lang/en_US.lang
+++ b/src/main/resources/assets/beyondrealitycore/lang/en_US.lang
@@ -48,27 +48,27 @@ tile.beyondrealitycore:oreUranium.name=Uranium Ore
 tile.beyondrealitycore:orePhosphate.name=Phosphate Ore
 tile.beyondrealitycore:oreZinc.name=Zinc Ore
 tile.beyondrealitycore:oreMagnetite.name=Magnetite Ore
-tile.beyondrealitycore:tinyoreApatite.name=Apatite Gravel Ore
-tile.beyondrealitycore:tinyoreCopper.name=Copper Gravel Ore
-tile.beyondrealitycore:tinyoreTin.name=Tin Gravel Ore
-tile.beyondrealitycore:tinyoreLead.name=Lead Gravel Ore
-tile.beyondrealitycore:tinyoreSilver.name=Silver Gravel Ore
-tile.beyondrealitycore:tinyoreNickel.name=Nickel Gravel Ore
-tile.beyondrealitycore:tinyoreAluminium.name=Aluminium Gravel Ore
-tile.beyondrealitycore:tinyorePlatinum.name=Platinum Gravel Ore
-tile.beyondrealitycore:tinyoreCadmium.name=Cadmium Gravel Ore
-tile.beyondrealitycore:tinyoreIndium.name=Indium Gravel Ore
-tile.beyondrealitycore:tinyoreMagnetite.name=Magnetite Gravel Ore
-tile.beyondrealitycore:tinyoreUranium.name=Uranium Gravel Ore
-tile.beyondrealitycore:tinyorePhosphate.name=Phosphate Gravel Ore
-tile.beyondrealitycore:tinyoreZinc.name=Zinc Gravel Ore
-tile.beyondrealitycore:tinyoreIron.name=Iron Gravel Ore
-tile.beyondrealitycore:tinyoreGold.name=Gold Gravel Ore
-tile.beyondrealitycore:tinyoreDiamond.name=Diamond Gravel Ore
-tile.beyondrealitycore:tinyoreEmerald.name=Emerald Gravel Ore
-tile.beyondrealitycore:tinyoreRedstone.name=Redstone Gravel Ore
-tile.beyondrealitycore:tinyoreLapis.name=Lapis Gravel Ore
-tile.beyondrealitycore:tinyoreCoal.name=Coal Gravel Ore
+tile.beyondrealitycore:tinyoreApatite.name=Sparse Apatite Ore
+tile.beyondrealitycore:tinyoreCopper.name=Sparse Copper Ore
+tile.beyondrealitycore:tinyoreTin.name=Sparse Tin Ore
+tile.beyondrealitycore:tinyoreLead.name=Sparse Lead Ore
+tile.beyondrealitycore:tinyoreSilver.name=Sparse Silver Ore
+tile.beyondrealitycore:tinyoreNickel.name=Sparse Nickel Ore
+tile.beyondrealitycore:tinyoreAluminium.name=Sparse Aluminium Ore
+tile.beyondrealitycore:tinyorePlatinum.name=Sparse Platinum Ore
+tile.beyondrealitycore:tinyoreCadmium.name=Sparse Cadmium Ore
+tile.beyondrealitycore:tinyoreIndium.name=Sparse Indium Ore
+tile.beyondrealitycore:tinyoreMagnetite.name=Sparse Magnetite Ore
+tile.beyondrealitycore:tinyoreUranium.name=Sparse Uranium Ore
+tile.beyondrealitycore:tinyorePhosphate.name=Sparse Phosphate Ore
+tile.beyondrealitycore:tinyoreZinc.name=Sparse Zinc Ore
+tile.beyondrealitycore:tinyoreIron.name=Sparse Iron Ore
+tile.beyondrealitycore:tinyoreGold.name=Sparse Gold Ore
+tile.beyondrealitycore:tinyoreDiamond.name=Sparse Diamond Ore
+tile.beyondrealitycore:tinyoreEmerald.name=Sparse Emerald Ore
+tile.beyondrealitycore:tinyoreRedstone.name=Sparse Redstone Ore
+tile.beyondrealitycore:tinyoreLapis.name=Sparse Lapis Ore
+tile.beyondrealitycore:tinyoreCoal.name=Sparse Coal Ore
 
 item.beyondrealitycore:gemApatite.name=Apatite
 item.beyondrealitycore:tinyApatite.name=Apatite Ore Chunks
