Add user addable unbreakable blocks.

--- a/src/main/resources/assets/beyondrealitycore/lang/en_US.lang
+++ b/src/main/resources/assets/beyondrealitycore/lang/en_US.lang
@@ -92,4 +92,4 @@ item.beyondrealitycore:tinyEmerald.name=Emerald Ore Chunks
 item.beyondrealitycore:tinyRedstone.name=Redstone Ore Chunks
 item.beyondrealitycore:tinyLapis.name=Lapis Ore Chunks
 item.beyondrealitycore:tinyCoal.name=Coal Ore Chunks
-
+tile.beyondrealitycore:blockAim.name=Invigorating Core
