Dom asked for this

--- a/src/main/resources/assets/beyondrealitycore/lang/en_US.lang
+++ b/src/main/resources/assets/beyondrealitycore/lang/en_US.lang
@@ -70,6 +70,8 @@ tile.beyondrealitycore:tinyoreRedstone.name=Sparse Redstone Ore
 tile.beyondrealitycore:tinyoreLapis.name=Sparse Lapis Ore
 tile.beyondrealitycore:tinyoreCoal.name=Sparse Coal Ore
 
+tile.beyondrealitycore:chair=Chair
+
 item.beyondrealitycore:gemApatite.name=Apatite
 item.beyondrealitycore:tinyApatite.name=Apatite Ore Chunks
 item.beyondrealitycore:tinyCopper.name=Copper Ore Chunks
@@ -113,3 +115,72 @@ tile.beyondreality:unbreakableBlock_12.name=TempleBlock12
 tile.beyondreality:unbreakableBlock_13.name=TempleBlock13
 tile.beyondreality:unbreakableBlock_14.name=TempleBlock14
 tile.beyondreality:unbreakableBlock_15.name=TempleBlock15
+
+tile.beyondrealitycore:chair:0.name=Tinkers Basic
+tile.beyondrealitycore:chair:1.name=Road Blocks
+tile.beyondrealitycore:chair:2.name=Tinkers Relinquisher
+tile.beyondrealitycore:chair:3.name=Rails and Carts Relinquisher
+tile.beyondrealitycore:chair:4.name=Early Tech Relinquisher
+tile.beyondrealitycore:chair:5.name=SteelWorks Relinquisher
+tile.beyondrealitycore:chair:6.name=Modular Systems Relinquisher
+tile.beyondrealitycore:chair:7.name=WerkBench Relinquisher
+tile.beyondrealitycore:chair:8.name=Pistronics Relinquisher
+tile.beyondrealitycore:chair:9.name=Mechworks Relinquisher
+tile.beyondrealitycore:chair:10.name=Modular Turrets Relinquisher
+tile.beyondrealitycore:chair:11.name=Enchanced Chest Relinquisher
+tile.beyondrealitycore:chair:12.name=TubeWorks Relinquisher
+tile.beyondrealitycore:chair:13.name=AgriCraft Relinquisher
+tile.beyondrealitycore:chair:14.name=Forestry Relinquisher
+tile.beyondrealitycore:chair:15.name=Extra Trees Bees Relinquisher
+tile.beyondrealitycore:chair:16.name=Genetics Relinquisher
+tile.beyondrealitycore:chair:17.name=BuildCraft Relinquisher
+tile.beyondrealitycore:chair:18.name=BuildCraft Additions Relinquisher 
+tile.beyondrealitycore:chair:19.name=Thaumic Pipes Relinquisher
+tile.beyondrealitycore:chair:20.name=Logistics Pipes Relinquisher
+tile.beyondrealitycore:chair:21.name=Applied Energistics Relinquisher
+tile.beyondrealitycore:chair:22.name=Immersive Engineering Relinquisher
+tile.beyondrealitycore:chair:23.name=Immersive Integration Relinquisher
+tile.beyondrealitycore:chair:24.name=Mining Drill Relinquisher
+tile.beyondrealitycore:chair:25.name=Excavator/Core Relinquisher
+tile.beyondrealitycore:chair:26.name=Simply Jetpacks Relinquisher
+tile.beyondrealitycore:chair:27.name=Modular Armor Relinquisher
+tile.beyondrealitycore:chair:28.name=Redstone Arsenal Relinquisher
+tile.beyondrealitycore:chair:29.name=Thermal Dynamics  Relinquisher
+tile.beyondrealitycore:chair:30.name=Thermal Expansion Relinquisher
+tile.beyondrealitycore:chair:31.name=RailCraft Relinquisher
+tile.beyondrealitycore:chair:32.name=RfTools Basics Relinquisher
+tile.beyondrealitycore:chair:33.name=Compact Machines Relinquisher
+tile.beyondrealitycore:chair:34.name=RfTools Advance Relinquisher
+tile.beyondrealitycore:chair:35.name=RotaryCraft Relinquisher
+tile.beyondrealitycore:chair:36.name=ElectriCraft Relinquisher
+tile.beyondrealitycore:chair:37.name=ReactorCraft Relinquisher
+tile.beyondrealitycore:chair:38.name=RotaryCraft Jetpacks Relinquisher
+tile.beyondrealitycore:chair:39.name=Matter OverDrive Relinquisher
+tile.beyondrealitycore:chair:40.name=Tesseracts Relinquisher
+tile.beyondrealitycore:chair:41.name=ChunkLoaders Relinquisher
+tile.beyondrealitycore:chair:42.name=ComputerCraft Relinquisher
+tile.beyondrealitycore:chair:43.name=Framez Relinquisher
+tile.beyondrealitycore:chair:44.name=ChromatiCraft Basics Relinquisher
+tile.beyondrealitycore:chair:45.name=ChromatiCraft Advance Relinquisher
+tile.beyondrealitycore:chair:46.name=ThaumCraft Relinquisher 
+tile.beyondrealitycore:chair:47.name=Shamanry Relinquisher
+tile.beyondrealitycore:chair:48.name=Thaumic Upholstery Relinquisher 
+tile.beyondrealitycore:chair:49.name=AutoMagy Relinquisher 
+tile.beyondrealitycore:chair:50.name=Witchery Relinquisher 
+tile.beyondrealitycore:chair:51.name=HexCraft Relinquisher 
+tile.beyondrealitycore:chair:52.name=Aura Cascade Relinquisher 
+tile.beyondrealitycore:chair:53.name=BloodMagic Relinquisher
+tile.beyondrealitycore:chair:54.name=Sanguinary Relinquisher
+tile.beyondrealitycore:chair:55.name=Travellers Gear Relinquisher
+tile.beyondrealitycore:chair:56.name=BiblioCraft Relinquisher
+tile.beyondrealitycore:chair:57.name=ZTones Relinquisher
+tile.beyondrealitycore:chair:58.name=Chisel Relinquisher 
+tile.beyondrealitycore:chair:59.name=LatBlocks Relinquisher
+tile.beyondrealitycore:chair:60.name=Carpenters Blocks Relinquisher
+tile.beyondrealitycore:chair:61.name=FloodLights Relinquisher
+tile.beyondrealitycore:chair:62.name=Armourer's Workshop Relinquisher
+tile.beyondrealitycore:chair:63.name=I Bench Relinquisher
+tile.beyondrealitycore:chair:64.name=SuperCrafting Frame Relinquisher
+tile.beyondrealitycore:chair:65.name=Craft Heraldry Relinquisher
+tile.beyondrealitycore:chair:66.name=DecoCraft Relinquisher
+tile.beyondrealitycore:chair:67.name=Malisis Doors Relinquisher
