--- a/src/main/resources/assets/beyondrealitycore/lang/en_US.lang
+++ b/src/main/resources/assets/beyondrealitycore/lang/en_US.lang
@@ -116,71 +116,87 @@ tile.beyondreality:unbreakableBlock_13.name=TempleBlock13
 tile.beyondreality:unbreakableBlock_14.name=TempleBlock14
 tile.beyondreality:unbreakableBlock_15.name=TempleBlock15
 
-tile.beyondrealitycore:chair:0.name=Tinkers Basic
-tile.beyondrealitycore:chair:1.name=Road Blocks
-tile.beyondrealitycore:chair:2.name=Tinkers Relinquisher
-tile.beyondrealitycore:chair:3.name=Rails and Carts Relinquisher
-tile.beyondrealitycore:chair:4.name=Early Tech Relinquisher
-tile.beyondrealitycore:chair:5.name=SteelWorks Relinquisher
-tile.beyondrealitycore:chair:6.name=Modular Systems Relinquisher
-tile.beyondrealitycore:chair:7.name=WerkBench Relinquisher
-tile.beyondrealitycore:chair:8.name=Pistronics Relinquisher
-tile.beyondrealitycore:chair:9.name=Mechworks Relinquisher
-tile.beyondrealitycore:chair:10.name=Modular Turrets Relinquisher
-tile.beyondrealitycore:chair:11.name=Enchanced Chest Relinquisher
-tile.beyondrealitycore:chair:12.name=TubeWorks Relinquisher
-tile.beyondrealitycore:chair:13.name=AgriCraft Relinquisher
-tile.beyondrealitycore:chair:14.name=Forestry Relinquisher
-tile.beyondrealitycore:chair:15.name=Extra Trees Bees Relinquisher
-tile.beyondrealitycore:chair:16.name=Genetics Relinquisher
-tile.beyondrealitycore:chair:17.name=BuildCraft Relinquisher
-tile.beyondrealitycore:chair:18.name=BuildCraft Additions Relinquisher 
-tile.beyondrealitycore:chair:19.name=Thaumic Pipes Relinquisher
-tile.beyondrealitycore:chair:20.name=Logistics Pipes Relinquisher
-tile.beyondrealitycore:chair:21.name=Applied Energistics Relinquisher
-tile.beyondrealitycore:chair:22.name=Immersive Engineering Relinquisher
-tile.beyondrealitycore:chair:23.name=Immersive Integration Relinquisher
-tile.beyondrealitycore:chair:24.name=Mining Drill Relinquisher
-tile.beyondrealitycore:chair:25.name=Excavator/Core Relinquisher
-tile.beyondrealitycore:chair:26.name=Simply Jetpacks Relinquisher
-tile.beyondrealitycore:chair:27.name=Modular Armor Relinquisher
-tile.beyondrealitycore:chair:28.name=Redstone Arsenal Relinquisher
-tile.beyondrealitycore:chair:29.name=Thermal Dynamics  Relinquisher
-tile.beyondrealitycore:chair:30.name=Thermal Expansion Relinquisher
-tile.beyondrealitycore:chair:31.name=RailCraft Relinquisher
-tile.beyondrealitycore:chair:32.name=RfTools Basics Relinquisher
-tile.beyondrealitycore:chair:33.name=Compact Machines Relinquisher
-tile.beyondrealitycore:chair:34.name=RfTools Advance Relinquisher
-tile.beyondrealitycore:chair:35.name=RotaryCraft Relinquisher
-tile.beyondrealitycore:chair:36.name=ElectriCraft Relinquisher
-tile.beyondrealitycore:chair:37.name=ReactorCraft Relinquisher
-tile.beyondrealitycore:chair:38.name=RotaryCraft Jetpacks Relinquisher
-tile.beyondrealitycore:chair:39.name=Matter OverDrive Relinquisher
-tile.beyondrealitycore:chair:40.name=Tesseracts Relinquisher
-tile.beyondrealitycore:chair:41.name=ChunkLoaders Relinquisher
-tile.beyondrealitycore:chair:42.name=ComputerCraft Relinquisher
-tile.beyondrealitycore:chair:43.name=Framez Relinquisher
-tile.beyondrealitycore:chair:44.name=ChromatiCraft Basics Relinquisher
-tile.beyondrealitycore:chair:45.name=ChromatiCraft Advance Relinquisher
-tile.beyondrealitycore:chair:46.name=ThaumCraft Relinquisher 
-tile.beyondrealitycore:chair:47.name=Shamanry Relinquisher
-tile.beyondrealitycore:chair:48.name=Thaumic Upholstery Relinquisher 
-tile.beyondrealitycore:chair:49.name=AutoMagy Relinquisher 
-tile.beyondrealitycore:chair:50.name=Witchery Relinquisher 
-tile.beyondrealitycore:chair:51.name=HexCraft Relinquisher 
-tile.beyondrealitycore:chair:52.name=Aura Cascade Relinquisher 
-tile.beyondrealitycore:chair:53.name=BloodMagic Relinquisher
-tile.beyondrealitycore:chair:54.name=Sanguinary Relinquisher
-tile.beyondrealitycore:chair:55.name=Travellers Gear Relinquisher
-tile.beyondrealitycore:chair:56.name=BiblioCraft Relinquisher
-tile.beyondrealitycore:chair:57.name=ZTones Relinquisher
-tile.beyondrealitycore:chair:58.name=Chisel Relinquisher 
-tile.beyondrealitycore:chair:59.name=LatBlocks Relinquisher
-tile.beyondrealitycore:chair:60.name=Carpenters Blocks Relinquisher
-tile.beyondrealitycore:chair:61.name=FloodLights Relinquisher
-tile.beyondrealitycore:chair:62.name=Armourer's Workshop Relinquisher
-tile.beyondrealitycore:chair:63.name=I Bench Relinquisher
-tile.beyondrealitycore:chair:64.name=SuperCrafting Frame Relinquisher
-tile.beyondrealitycore:chair:65.name=Craft Heraldry Relinquisher
-tile.beyondrealitycore:chair:66.name=DecoCraft Relinquisher
-tile.beyondrealitycore:chair:67.name=Malisis Doors Relinquisher
+tile.beyondrealitycore:chair:0.name=Tinkers Basic 
+tile.beyondrealitycore:chair:1.name=Road Blocks 
+tile.beyondrealitycore:chair:2.name=Tinkers Construct 
+tile.beyondrealitycore:chair:3.name=Rails and Carts 
+tile.beyondrealitycore:chair:4.name=Early Tech 
+tile.beyondrealitycore:chair:5.name=SteelWorks 
+tile.beyondrealitycore:chair:6.name=Modular Systems 
+tile.beyondrealitycore:chair:7.name=Builder's Guides 
+tile.beyondrealitycore:chair:8.name=Pistronics 
+tile.beyondrealitycore:chair:9.name=Mechworks 
+tile.beyondrealitycore:chair:10.name=Modular Turrets 
+tile.beyondrealitycore:chair:11.name=Enchanced Chest 
+tile.beyondrealitycore:chair:12.name=TubeWorks 
+tile.beyondrealitycore:chair:13.name=AgriCraft 
+tile.beyondrealitycore:chair:14.name=Forestry 
+tile.beyondrealitycore:chair:15.name=Extra Trees Bees 
+tile.beyondrealitycore:chair:16.name=Genetics 
+tile.beyondrealitycore:chair:17.name=BuildCraft 
+tile.beyondrealitycore:chair:18.name=BuildCraft Additions  
+tile.beyondrealitycore:chair:19.name=Thaumic Gates 
+tile.beyondrealitycore:chair:20.name=Logistics Pipes 
+tile.beyondrealitycore:chair:21.name=Applied Energistics 
+tile.beyondrealitycore:chair:22.name=Immersive Engineering 
+tile.beyondrealitycore:chair:23.name=Immersive Integration 
+tile.beyondrealitycore:chair:24.name=Mining Drill 
+tile.beyondrealitycore:chair:25.name=Excavator/Core 
+tile.beyondrealitycore:chair:26.name=Simply Jetpacks 
+tile.beyondrealitycore:chair:27.name=Modular Armor 
+tile.beyondrealitycore:chair:28.name=Redstone Arsenal 
+tile.beyondrealitycore:chair:29.name=Thermal Dynamics  
+tile.beyondrealitycore:chair:30.name=Thermal Expansion 
+tile.beyondrealitycore:chair:31.name=RailCraft 
+tile.beyondrealitycore:chair:32.name=RfTools Basics 
+tile.beyondrealitycore:chair:33.name=Compact Machines 
+tile.beyondrealitycore:chair:34.name=RfTools Advance 
+tile.beyondrealitycore:chair:35.name=RotaryCraft 
+tile.beyondrealitycore:chair:36.name=ElectriCraft 
+tile.beyondrealitycore:chair:37.name=ReactorCraft 
+tile.beyondrealitycore:chair:38.name=RotaryCraft Jetpacks 
+tile.beyondrealitycore:chair:39.name=Matter OverDrive 
+tile.beyondrealitycore:chair:40.name=Tesseracts 
+tile.beyondrealitycore:chair:41.name=ChunkLoaders 
+tile.beyondrealitycore:chair:42.name=ComputerCraft 
+tile.beyondrealitycore:chair:43.name=Framez 
+tile.beyondrealitycore:chair:44.name=ChromatiCraft Basics 
+tile.beyondrealitycore:chair:45.name=ChromatiCraft Advance 
+tile.beyondrealitycore:chair:46.name=ThaumCraft  
+tile.beyondrealitycore:chair:47.name=Shamanry 
+tile.beyondrealitycore:chair:48.name=Thaumic Upholstery  
+tile.beyondrealitycore:chair:49.name=AutoMagy  
+tile.beyondrealitycore:chair:50.name=Witchery  
+tile.beyondrealitycore:chair:51.name=HexCraft  
+tile.beyondrealitycore:chair:52.name=Aura Cascade  
+tile.beyondrealitycore:chair:53.name=BloodMagic 
+tile.beyondrealitycore:chair:54.name=Sanguinary 
+tile.beyondrealitycore:chair:55.name=Travellers Gear 
+tile.beyondrealitycore:chair:56.name=BiblioCraft 
+tile.beyondrealitycore:chair:57.name=ZTones 
+tile.beyondrealitycore:chair:58.name=Chisel  
+tile.beyondrealitycore:chair:59.name=Big Factories 
+tile.beyondrealitycore:chair:60.name=Carpenters Blocks 
+tile.beyondrealitycore:chair:61.name=FloodLights 
+tile.beyondrealitycore:chair:62.name=Armourer's Workshop 
+tile.beyondrealitycore:chair:63.name=I Bench 
+tile.beyondrealitycore:chair:64.name=SuperCrafting Frame 
+tile.beyondrealitycore:chair:65.name=Craft Heraldry 
+tile.beyondrealitycore:chair:66.name=DecoCraft 
+tile.beyondrealitycore:chair:67.name=Malisis Doors 
+tile.beyondrealitycore:chair:68.name=Project Red 
+tile.beyondrealitycore:chair:69.name=Witching Gadgets 
+tile.beyondrealitycore:chair:70.name=Storage Drawers
+tile.beyondrealitycore:chair:71.name=YeGamolChattels
+tile.beyondrealitycore:chair:72.name=AutoPackager
+
+beyondrealitycore:item0.name=NetherPortal Key
+beyondrealitycore:item1.name=EndPortal Key
+beyondrealitycore:item2.name=Exceptional Tech Augmentation
+beyondrealitycore:item3.name=Advanced Tech Augmentation
+beyondrealitycore:item4.name=Passive Tech Augmentation
+beyondrealitycore:item5.name=Invigorated Tech Augmentation
+beyondrealitycore:item6.name=Notable Magic Amplification
+beyondrealitycore:item7.name=Admirable Magic Amplification
+beyondrealitycore:item8.name=Passive Amplification
+beyondrealitycore:item9.name=Invigorated Amplification
