--- a/src/main/resources/assets/beyondrealitycore/lang/en_US.lang
+++ b/src/main/resources/assets/beyondrealitycore/lang/en_US.lang
@@ -190,13 +190,13 @@ tile.beyondrealitycore:chair:70.name=Storage Drawers
 tile.beyondrealitycore:chair:71.name=YeGamolChattels
 tile.beyondrealitycore:chair:72.name=AutoPackager
 
-beyondrealitycore:item0.name=NetherPortal Key
-beyondrealitycore:item1.name=EndPortal Key
-beyondrealitycore:item2.name=Exceptional Tech Augmentation
-beyondrealitycore:item3.name=Advanced Tech Augmentation
-beyondrealitycore:item4.name=Passive Tech Augmentation
-beyondrealitycore:item5.name=Invigorated Tech Augmentation
-beyondrealitycore:item6.name=Notable Magic Amplification
-beyondrealitycore:item7.name=Admirable Magic Amplification
-beyondrealitycore:item8.name=Passive Amplification
-beyondrealitycore:item9.name=Invigorated Amplification
+item.beyondrealitycore:item0.name=NetherPortal Key
+item.beyondrealitycore:item1.name=EndPortal Key
+item.beyondrealitycore:item2.name=Exceptional Tech Augmentation
+item.beyondrealitycore:item3.name=Advanced Tech Augmentation
+item.beyondrealitycore:item4.name=Passive Tech Augmentation
+item.beyondrealitycore:item5.name=Invigorated Tech Augmentation
+item.beyondrealitycore:item6.name=Notable Magic Amplification
+item.beyondrealitycore:item7.name=Admirable Magic Amplification
+item.beyondrealitycore:item8.name=Passive Amplification
+item.beyondrealitycore:item9.name=Invigorated Amplification
