Update BR Core.
Update Chairs, Add in Basic Research texture and name, Use Usa spelling
for Aluminum

--- a/src/main/resources/assets/beyondrealitycore/lang/en_US.lang
+++ b/src/main/resources/assets/beyondrealitycore/lang/en_US.lang
@@ -40,7 +40,7 @@ tile.beyondrealitycore:oreTin.name=Tin Ore
 tile.beyondrealitycore:oreLead.name=Lead Ore
 tile.beyondrealitycore:oreSilver.name=Silver Ore
 tile.beyondrealitycore:oreNickel.name=Nickel Ore
-tile.beyondrealitycore:oreAluminium.name=Aluminium Ore
+tile.beyondrealitycore:oreAluminium.name=Aluminum Ore
 tile.beyondrealitycore:orePlatinum.name=Platinum Ore
 tile.beyondrealitycore:oreCadmium.name=Cadmium Ore
 tile.beyondrealitycore:oreIndium.name=Indium Ore
@@ -54,7 +54,7 @@ tile.beyondrealitycore:tinyoreTin.name=Sparse Tin Ore
 tile.beyondrealitycore:tinyoreLead.name=Sparse Lead Ore
 tile.beyondrealitycore:tinyoreSilver.name=Sparse Silver Ore
 tile.beyondrealitycore:tinyoreNickel.name=Sparse Nickel Ore
-tile.beyondrealitycore:tinyoreAluminium.name=Sparse Aluminium Ore
+tile.beyondrealitycore:tinyoreAluminium.name=Sparse Aluminum Ore
 tile.beyondrealitycore:tinyorePlatinum.name=Sparse Platinum Ore
 tile.beyondrealitycore:tinyoreCadmium.name=Sparse Cadmium Ore
 tile.beyondrealitycore:tinyoreIndium.name=Sparse Indium Ore
@@ -79,7 +79,7 @@ item.beyondrealitycore:tinyTin.name=Tin Ore Chunks
 item.beyondrealitycore:tinyLead.name=Lead Ore Chunks
 item.beyondrealitycore:tinySilver.name=Silver Ore Chunks
 item.beyondrealitycore:tinyNickel.name=Nickel Ore Chunks
-item.beyondrealitycore:tinyAluminium.name=Aluminium Ore Chunks
+item.beyondrealitycore:tinyAluminium.name=Aluminum Ore Chunks
 item.beyondrealitycore:tinyPlatinum.name=Platinum Ore Chunks
 item.beyondrealitycore:tinyCadmium.name=Cadmium Ore Chunks
 item.beyondrealitycore:tinyIndium.name=Indium Ore Chunks
@@ -157,9 +157,9 @@ tile.beyondrealitycore:chair:37.name=ReactorCraft
 tile.beyondrealitycore:chair:38.name=RotaryCraft Jetpacks 
 tile.beyondrealitycore:chair:39.name=Matter OverDrive 
 tile.beyondrealitycore:chair:40.name=Tesseracts 
-tile.beyondrealitycore:chair:41.name=ChunkLoaders 
+tile.beyondrealitycore:chair:41.name=Advanced Generators 
 tile.beyondrealitycore:chair:42.name=ComputerCraft 
-tile.beyondrealitycore:chair:43.name=Framez 
+tile.beyondrealitycore:chair:43.name=Big Reactors
 tile.beyondrealitycore:chair:44.name=ChromatiCraft Basics 
 tile.beyondrealitycore:chair:45.name=ChromatiCraft Advance 
 tile.beyondrealitycore:chair:46.name=ThaumCraft  
@@ -189,6 +189,9 @@ tile.beyondrealitycore:chair:69.name=Witching Gadgets
 tile.beyondrealitycore:chair:70.name=Storage Drawers
 tile.beyondrealitycore:chair:71.name=YeGamolChattels
 tile.beyondrealitycore:chair:72.name=AutoPackager
+tile.beyondrealitycore:chair:73.name=Forbidden Magic
+tile.beyondrealitycore:chair:74.name=TerraSteel
+
 
 item.beyondrealitycore:item0.name=NetherPortal Key
 item.beyondrealitycore:item1.name=EndPortal Key
@@ -200,3 +203,4 @@ item.beyondrealitycore:item6.name=Notable Magic Amplification
 item.beyondrealitycore:item7.name=Admirable Magic Amplification
 item.beyondrealitycore:item8.name=Passive Amplification
 item.beyondrealitycore:item9.name=Invigorated Amplification
+item.beyondrealitycore:item10.name=Expedition Memento
