replaced removed chairs with new ones

--- a/src/main/resources/assets/beyondrealitycore/lang/en_US.lang
+++ b/src/main/resources/assets/beyondrealitycore/lang/en_US.lang
@@ -151,10 +151,10 @@ tile.beyondrealitycore:chair:31.name=RailCraft
 tile.beyondrealitycore:chair:32.name=RfTools Basics 
 tile.beyondrealitycore:chair:33.name=Compact Machines 
 tile.beyondrealitycore:chair:34.name=RfTools Advance 
-tile.beyondrealitycore:chair:35.name=RotaryCraft 
-tile.beyondrealitycore:chair:36.name=ElectriCraft 
-tile.beyondrealitycore:chair:37.name=ReactorCraft 
-tile.beyondrealitycore:chair:38.name=RotaryCraft Jetpacks 
+tile.beyondrealitycore:chair:35.name=Pneumatic Craft
+tile.beyondrealitycore:chair:36.name=MagnetiCraft 
+tile.beyondrealitycore:chair:37.name=ElectronicMetrics 
+tile.beyondrealitycore:chair:38.name=Not In Use
 tile.beyondrealitycore:chair:39.name=Matter OverDrive 
 tile.beyondrealitycore:chair:40.name=Tesseracts 
 tile.beyondrealitycore:chair:41.name=Advanced Generators 
