--- a/src/main/resources/assets/beyondrealitycore/lang/en_US.lang
+++ b/src/main/resources/assets/beyondrealitycore/lang/en_US.lang
@@ -182,7 +182,7 @@ tile.beyondrealitycore:chair:62.name=Armourer's Workshop
 tile.beyondrealitycore:chair:63.name=I Bench 
 tile.beyondrealitycore:chair:64.name=SuperCrafting Frame 
 tile.beyondrealitycore:chair:65.name=Craft Heraldry 
-tile.beyondrealitycore:chair:66.name=DecoCraft 
+tile.beyondrealitycore:chair:66.name=Wall Paper 
 tile.beyondrealitycore:chair:67.name=Malisis Doors 
 tile.beyondrealitycore:chair:68.name=Project Red 
 tile.beyondrealitycore:chair:69.name=Witching Gadgets 
@@ -195,8 +195,8 @@ tile.beyondrealitycore:chair:75.name=Applied Thaumic
 tile.beyondrealitycore:chair:76.name=SF Art
 tile.beyondrealitycore:chair:77.name=AE2 Stuff
 
-item.beyondrealitycore:item0.name=NetherPortal Key
-item.beyondrealitycore:item1.name=EndPortal Key
+item.beyondrealitycore:item0.name=Broken NetherPortal Key
+item.beyondrealitycore:item1.name=Broken EndPortal Key
 item.beyondrealitycore:item2.name=Exceptional Tech Augmentation
 item.beyondrealitycore:item3.name=Advanced Tech Augmentation
 item.beyondrealitycore:item4.name=Passive Tech Augmentation
@@ -206,3 +206,5 @@ item.beyondrealitycore:item7.name=Admirable Magic Amplification
 item.beyondrealitycore:item8.name=Passive Amplification
 item.beyondrealitycore:item9.name=Invigorated Amplification
 item.beyondrealitycore:item10.name=Expedition Memento
+item.beyondrealitycore:item11.name=NetherPortal Key
+item.beyondrealitycore:item12.name=EndPortal Key
