Lang changes for new chair names.

--- a/src/main/resources/assets/beyondrealitycore/lang/en_US.lang
+++ b/src/main/resources/assets/beyondrealitycore/lang/en_US.lang
@@ -129,7 +129,7 @@ tile.beyondrealitycore:chair:9.name=Mechworks
 tile.beyondrealitycore:chair:10.name=Modular Turrets 
 tile.beyondrealitycore:chair:11.name=Enchanced Chest 
 tile.beyondrealitycore:chair:12.name=TubeWorks 
-tile.beyondrealitycore:chair:13.name=AgriCraft 
+tile.beyondrealitycore:chair:13.name=Steve's Carts
 tile.beyondrealitycore:chair:14.name=Forestry 
 tile.beyondrealitycore:chair:15.name=Extra Trees Bees 
 tile.beyondrealitycore:chair:16.name=Genetics 
@@ -153,15 +153,15 @@ tile.beyondrealitycore:chair:33.name=Compact Machines
 tile.beyondrealitycore:chair:34.name=RfTools Advance 
 tile.beyondrealitycore:chair:35.name=Pneumatic Craft
 tile.beyondrealitycore:chair:36.name=MagnetiCraft 
-tile.beyondrealitycore:chair:37.name=ElectronicMetrics 
+tile.beyondrealitycore:chair:37.name=ElectronicMetrics / Fluxpads
 tile.beyondrealitycore:chair:38.name=Not In Use
 tile.beyondrealitycore:chair:39.name=Matter OverDrive 
 tile.beyondrealitycore:chair:40.name=Tesseracts 
 tile.beyondrealitycore:chair:41.name=Advanced Generators 
 tile.beyondrealitycore:chair:42.name=ComputerCraft 
 tile.beyondrealitycore:chair:43.name=Big Reactors
-tile.beyondrealitycore:chair:44.name=ChromatiCraft Basics 
-tile.beyondrealitycore:chair:45.name=ChromatiCraft Advance 
+tile.beyondrealitycore:chair:44.name=ChromatiCraft 
+tile.beyondrealitycore:chair:45.name=Soul Shards 
 tile.beyondrealitycore:chair:46.name=ThaumCraft  
 tile.beyondrealitycore:chair:47.name=Shamanry 
 tile.beyondrealitycore:chair:48.name=Thaumic Upholstery  
@@ -174,7 +174,7 @@ tile.beyondrealitycore:chair:54.name=Sanguinary
 tile.beyondrealitycore:chair:55.name=Travellers Gear 
 tile.beyondrealitycore:chair:56.name=BiblioCraft 
 tile.beyondrealitycore:chair:57.name=ZTones 
-tile.beyondrealitycore:chair:58.name=Chisel  
+tile.beyondrealitycore:chair:58.name=Chisel / Wall Paper  
 tile.beyondrealitycore:chair:59.name=Big Factories 
 tile.beyondrealitycore:chair:60.name=Carpenters Blocks 
 tile.beyondrealitycore:chair:61.name=FloodLights 
@@ -182,11 +182,11 @@ tile.beyondrealitycore:chair:62.name=Armourer's Workshop
 tile.beyondrealitycore:chair:63.name=I Bench 
 tile.beyondrealitycore:chair:64.name=SuperCrafting Frame 
 tile.beyondrealitycore:chair:65.name=Craft Heraldry 
-tile.beyondrealitycore:chair:66.name=Wall Paper 
+tile.beyondrealitycore:chair:66.name=Storage Drawers
 tile.beyondrealitycore:chair:67.name=Malisis Doors 
 tile.beyondrealitycore:chair:68.name=Project Red 
 tile.beyondrealitycore:chair:69.name=Witching Gadgets 
-tile.beyondrealitycore:chair:70.name=Storage Drawers
+tile.beyondrealitycore:chair:70.name=Not In Use
 tile.beyondrealitycore:chair:71.name=YeGamolChattels
 tile.beyondrealitycore:chair:72.name=AutoPackager
 tile.beyondrealitycore:chair:73.name=Forbidden Magic
