Update Lang and update build #

--- a/src/main/resources/assets/beyondrealitycore/lang/en_US.lang
+++ b/src/main/resources/assets/beyondrealitycore/lang/en_US.lang
@@ -153,7 +153,7 @@ tile.beyondrealitycore:chair:33.name=Compact Machines
 tile.beyondrealitycore:chair:34.name=RfTools Advance 
 tile.beyondrealitycore:chair:35.name=Pneumatic Craft
 tile.beyondrealitycore:chair:36.name=MagnetiCraft 
-tile.beyondrealitycore:chair:37.name=ElectronicMetrics / Fluxpads
+tile.beyondrealitycore:chair:37.name=QuantumStorage / Flux-pad's / Simply Labels
 tile.beyondrealitycore:chair:38.name=Not In Use
 tile.beyondrealitycore:chair:39.name=Matter OverDrive 
 tile.beyondrealitycore:chair:40.name=Tesseracts 
