Add in extra chairs to lang

--- a/src/main/resources/assets/beyondrealitycore/lang/en_US.lang
+++ b/src/main/resources/assets/beyondrealitycore/lang/en_US.lang
@@ -198,6 +198,42 @@ tile.beyondrealitycore:chair:74.name=TerraSteel
 tile.beyondrealitycore:chair:75.name=Applied Thaumic
 tile.beyondrealitycore:chair:76.name=SF Art
 tile.beyondrealitycore:chair:77.name=AE2 Stuff
+tile.beyondrealitycore:chair:78.name=tutorial1
+tile.beyondrealitycore:chair:79.name=tutorial2
+tile.beyondrealitycore:chair:80.name=tutorial3
+tile.beyondrealitycore:chair:81.name=tutorial4
+tile.beyondrealitycore:chair:82.name=tutorial5
+tile.beyondrealitycore:chair:83.name=basic1
+tile.beyondrealitycore:chair:84.name=basic2
+tile.beyondrealitycore:chair:85.name=basic3
+tile.beyondrealitycore:chair:86.name=basic4
+tile.beyondrealitycore:chair:87.name=basic5
+tile.beyondrealitycore:chair:88.name=basic6
+tile.beyondrealitycore:chair:89.name=basic7
+tile.beyondrealitycore:chair:90.name=basic8
+tile.beyondrealitycore:chair:91.name=basic9
+tile.beyondrealitycore:chair:92.name=basic10
+tile.beyondrealitycore:chair:93.name=basic11
+tile.beyondrealitycore:chair:94.name=basic12
+tile.beyondrealitycore:chair:95.name=basic13
+tile.beyondrealitycore:chair:96.name=magic1
+tile.beyondrealitycore:chair:97.name=magic2
+tile.beyondrealitycore:chair:98.name=magic3
+tile.beyondrealitycore:chair:99.name=magic4
+tile.beyondrealitycore:chair:100.name=magic5
+tile.beyondrealitycore:chair:101.name=magic6
+tile.beyondrealitycore:chair:102.name=magic7
+tile.beyondrealitycore:chair:103.name=magic8
+tile.beyondrealitycore:chair:104.name=magic9
+tile.beyondrealitycore:chair:105.name=magic10
+tile.beyondrealitycore:chair:106.name=magic11
+tile.beyondrealitycore:chair:107.name=magic12
+tile.beyondrealitycore:chair:108.name=magic13
+tile.beyondrealitycore:chair:109.name=magic14
+tile.beyondrealitycore:chair:110.name=magic15
+tile.beyondrealitycore:chair:111.name=magic16
+tile.beyondrealitycore:chair:112.name=magic17
+
 
 item.beyondrealitycore:item0.name=Broken Nether Key
 item.beyondrealitycore:item1.name=Broken End Key
