Update Chair Names / Add New

--- a/src/main/resources/assets/beyondrealitycore/lang/en_US.lang
+++ b/src/main/resources/assets/beyondrealitycore/lang/en_US.lang
@@ -126,12 +126,12 @@ tile.beyondrealitycore:chair:2.name=Tinkers Construct
 tile.beyondrealitycore:chair:3.name=Rails and Carts 
 tile.beyondrealitycore:chair:4.name=Early Tech 
 tile.beyondrealitycore:chair:5.name=SteelWorks 
-tile.beyondrealitycore:chair:6.name=Modular Systems 
+tile.beyondrealitycore:chair:6.name=DecoCraft
 tile.beyondrealitycore:chair:7.name=Builder's Guides 
 tile.beyondrealitycore:chair:8.name=Pistronics 
 tile.beyondrealitycore:chair:9.name=Mechworks 
 tile.beyondrealitycore:chair:10.name=Modular Turrets 
-tile.beyondrealitycore:chair:11.name=Enchanced Chest 
+tile.beyondrealitycore:chair:11.name=Enhanced Chest 
 tile.beyondrealitycore:chair:12.name=TubeWorks 
 tile.beyondrealitycore:chair:13.name=Steve's Carts
 tile.beyondrealitycore:chair:14.name=Forestry 
@@ -144,7 +144,7 @@ tile.beyondrealitycore:chair:20.name=Logistics Pipes
 tile.beyondrealitycore:chair:21.name=Applied Energistics 
 tile.beyondrealitycore:chair:22.name=Immersive Engineering 
 tile.beyondrealitycore:chair:23.name=Immersive Integration 
-tile.beyondrealitycore:chair:24.name=Mining Drill 
+tile.beyondrealitycore:chair:24.name=ElectriCraft
 tile.beyondrealitycore:chair:25.name=Excavator/Core 
 tile.beyondrealitycore:chair:26.name=Simply Jetpacks 
 tile.beyondrealitycore:chair:27.name=Modular Armor 
@@ -162,7 +162,7 @@ tile.beyondrealitycore:chair:38.name=Not In Use
 tile.beyondrealitycore:chair:39.name=Matter OverDrive 
 tile.beyondrealitycore:chair:40.name=Tesseracts 
 tile.beyondrealitycore:chair:41.name=Advanced Generators 
-tile.beyondrealitycore:chair:42.name=ComputerCraft 
+tile.beyondrealitycore:chair:42.name=OpenComputers
 tile.beyondrealitycore:chair:43.name=Big Reactors
 tile.beyondrealitycore:chair:44.name=ChromatiCraft 
 tile.beyondrealitycore:chair:45.name=Soul Shards 
@@ -179,7 +179,7 @@ tile.beyondrealitycore:chair:55.name=Travellers Gear
 tile.beyondrealitycore:chair:56.name=BiblioCraft 
 tile.beyondrealitycore:chair:57.name=ZTones 
 tile.beyondrealitycore:chair:58.name=Chisel / Wall Paper  
-tile.beyondrealitycore:chair:59.name=Big Factories 
+tile.beyondrealitycore:chair:59.name=Rotary Craft
 tile.beyondrealitycore:chair:60.name=Carpenters Blocks 
 tile.beyondrealitycore:chair:61.name=FloodLights 
 tile.beyondrealitycore:chair:62.name=Armourer's Workshop 
@@ -192,10 +192,10 @@ tile.beyondrealitycore:chair:68.name=Project Red
 tile.beyondrealitycore:chair:69.name=Witching Gadgets 
 tile.beyondrealitycore:chair:70.name=Not In Use
 tile.beyondrealitycore:chair:71.name=YeGamolChattels
-tile.beyondrealitycore:chair:72.name=AutoPackager
+tile.beyondrealitycore:chair:72.name=Compacter
 tile.beyondrealitycore:chair:73.name=Forbidden Magic
 tile.beyondrealitycore:chair:74.name=TerraSteel
-tile.beyondrealitycore:chair:75.name=Applied Thaumic
+tile.beyondrealitycore:chair:75.name=Modular Systems 
 tile.beyondrealitycore:chair:76.name=SF Art
 tile.beyondrealitycore:chair:77.name=AE2 Stuff
 tile.beyondrealitycore:chair:78.name=tutorial1
@@ -216,9 +216,9 @@ tile.beyondrealitycore:chair:92.name=basic10
 tile.beyondrealitycore:chair:93.name=basic11
 tile.beyondrealitycore:chair:94.name=basic12
 tile.beyondrealitycore:chair:95.name=basic13
-tile.beyondrealitycore:chair:96.name=magic1
-tile.beyondrealitycore:chair:97.name=magic2
-tile.beyondrealitycore:chair:98.name=magic3
+tile.beyondrealitycore:chair:96.name=Draconic Evolution
+tile.beyondrealitycore:chair:97.name=Reliquary
+tile.beyondrealitycore:chair:98.name=Thaumic Energistics
 tile.beyondrealitycore:chair:99.name=magic4
 tile.beyondrealitycore:chair:100.name=magic5
 tile.beyondrealitycore:chair:101.name=magic6
